--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -15,6 +15,7 @@
         "dev": "vite build --watch",
         "build": "pnpm test && pnpm lint && vite build",
         "test": "vitest run",
+        "test-coverage": "vitest run --coverage",
         "lint": "eslint src --ext .ts,.js,.mjs,.mts"
     },
     "dependencies": {
@@ -26,6 +27,7 @@
         "@types/node": "^22.14.0",
         "@typescript-eslint/eslint-plugin": "^8.34.0",
         "@typescript-eslint/parser": "^8.34.0",
+        "@vitest/coverage-v8": "^3.2.4",
         "eslint": "^9.28.0",
         "events": "^3.0.0",
         "typescript": "^5.8.3",
